data/raw_logs/semantic/sem_23.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_23.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_23.c:1:32: error: passing argument 1 of 'f' makes pointer from integer without a cast [-Wint-conversion]
    1 | void f(int* p); int main() { f(10); }
      |                                ^~
      |                                |
      |                                int
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_23.c:1:13: note: expected 'int *' but argument is of type 'int'
    1 | void f(int* p); int main() { f(10); }
      |        ~~~~~^
